aws_kube/k8s/apps/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector: {app.kubernetes.io/name: postgres}
  ports:
    - {name: postgres, port: 5432, targetPort: 5432}
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
spec:
  clusterIP: None
  selector: {app.kubernetes.io/name: postgres}
  ports:
    - {name: postgres, port: 5432, targetPort: 5432}
