aws_kube/k8s/apps/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route-ingress
spec:
  entryPoints:
    - api
  routes:
    - match: Host(`traefik.lensboxd.site`)
      kind: Rule
      services:
        - name: api-service
          port: 80
